# book-app-fastapi

./: .env  pyproject.toml
book_app_fastapi/: data.py  database.py  main.py  models.py  schemas.py  settings.py
book_app_fastapi/routes/: books.py
